--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-fetch": "^3.3.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
+    "lucide-react": "^0.453.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
