--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^5.2.1",
     "node-fetch": "^3.3.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
     "lucide-react": "^0.453.0"
   },
   "devDependencies": {
